kube/kustomization/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  labels:
    app: app1
spec:
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: my-app
        ports:
        - containerPort: 8080
        # option 1: use envFrom to inject configMap directly into env vars
      - name: database
        image: docker.io/jaydockship/database
