kube/kustomization/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  labels:
    app: app1
spec:
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
        type: application
    spec:
      containers:
      - name: app1
        image: my-app
        resources: {}
        ports:
        - containerPort: 8080
        # option 1: use envFrom to inject configMap directly into env vars
---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  labels:
    run: app1-service
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: app1
