kube/kustomization/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app2
  name: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  strategy: {}
  template:
    metadata:
      labels:
        app: app2
        type: application
    spec:
      containers:
      - name: app2
        image: my-app2
        resources: {}
        ports:
        - containerPort: 8080
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  labels:
    run: app2-service
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: app2
