kube/kustomization/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx-service
spec:
  type: ClusterIP
  ports:
  - name: nginx-port
    port: 80
    protocol: TCP
  selector:
    type: application
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - name: nginx-port
    port: 80
    protocol: TCP
  selector:
    type: application
