kube/kustomization/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  ingressClassName: default
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: app1-service
            port:
              number: 8080
        path: /app1
        pathType: Prefix
      - backend:
          service:
            name: app2-service
            port:
              number: 8080
        path: /app2
        pathType: Prefix
status:
  loadBalancer: {}
